# skyup-desktop

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: progress.tsx  self-update.tsx  text.tsx  update.tsx
src/lib/: lang.ts
