[package]
name = "skyup"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "skyup_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.5", features = ["stream"] }
tokio = { version = "1", features = ["fs"] }
mail-send = "0.4.9"
futures-util = "0.3.30"
tar = "0.4.41"
sysinfo = "0.30.13"
tauri-plugin-os = { version = "2.0.0-beta.8" }
tauri-plugin-process = "2.0.0-rc.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0.0-rc.1"
